--- a/templates/listConversations.twig
+++ b/templates/listConversations.twig
@@ -37,6 +37,6 @@
         </tbody>
     </table>
 </div>
-<script>
-    
-</script>
+{% if displayHelp == true %}
+<script>Piwik_Chat_Admin.displayHelp();</script>
+{% endif %}
