--- a/templates/getVisitorProfilePopup.twig
+++ b/templates/getVisitorProfilePopup.twig
@@ -1,3 +1,6 @@
+{% if not visitorData %}
+    <div class="pk-emptyDataTable">{{ 'CoreHome_ThereIsNoDataForThisReport'|translate }}</div>
+{% else %}
 <div class="visitor-profile"
      data-visitor-id="{{ visitorData.lastVisits.getFirstRow().getColumn('visitorId') }}"
      data-next-visitor="{{ visitorData.nextVisitorId }}"
@@ -240,3 +243,4 @@
         require('piwik/UI').ChatVisitorProfile.initElements("{{ visitorData.lastVisits.getFirstRow().getColumn('visitorId') }}");
     });
 </script>
+{% endif %}
