Rewrite chat.js in backend
Refactorisation and simplification.
Replace all $.ajax()

--- a/templates/getVisitorProfilePopup.twig
+++ b/templates/getVisitorProfilePopup.twig
@@ -60,6 +60,8 @@
 
                             <input type="submit" class="submit-button" value="{{ 'Chat_Save'|translate }}"
                                    style="margin-top:5px"/>
+
+                            <span class="loading-personal-info" style="font-size: 11px; color: #bbb; display: none;">Chargement...</span>
                         </div>
                         <div class="clearfix"></div>
                     </form>
