Add a bug reporting system, sent over email. Upgrade version

--- a/stylesheets/backend/chat.css
+++ b/stylesheets/backend/chat.css
@@ -137,3 +137,12 @@
 .visitor-profile p:last-child{
     padding-bottom: 10px;
 }
+
+.disabledInput{
+    background: #EEE !important;
+    cursor: no-drop;
+}
+
+.whatsHappening{
+    margin-left: 20px;
+}
