--- a/templates/popout.twig
+++ b/templates/popout.twig
@@ -9,7 +9,7 @@
 <body>
 <input type="hidden" id="idvisitor" value="{{ idvisitor }}"/>
 
-<div class="chat-container chat-state-1" {% if state == 1 %}style="display:block;"{% endif %}>
+<div class="chat-container chat-state-1">
     <div class="chat-wrapper">
         <div class="chat-header">
             <span class="header-title">
@@ -21,7 +21,7 @@
     </div>
 </div>
 
-<div class="chat-container chat-state-2" {% if state == 2 %}style="display:block;"{% endif %}>
+<div class="chat-container chat-state-2">
     <div class="is-staff-online header-title">{% if isStaffOnline == 1 %}
             <div class="yes"><span class="circle"></span> {{ 'Chat_StaffOnline'|translate }}</div>{% endif %}</div>
     <div class="chat-state-2-content">
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div class="chat-container chat-state-3" {% if state == 3 %}style="display:block;"{% endif %}>
+<div class="chat-container chat-state-3">
     <form id="form-chat-state-3">
         <div class="chat-wrapper">
             <div class="chat-header">
@@ -75,7 +75,7 @@
     </form>
 </div>
 
-<div class="chat-container chat-state-4" {% if state == 4 %}style="display:block;"{% endif %}>
+<div class="chat-container chat-state-4">
     <div class="chat-wrapper">
         <div class="chat-header">
             <span class="header-title">
@@ -172,7 +172,9 @@
 <script src="{{ piwikUrl }}plugins/Chat/javascripts/client/popout.js"></script>
 <script>
     $(document).ready(function () {
-        Piwik_Chat_Popout.setTranslationTable({
+        var popout = new Piwik_Chat_Popout();
+
+        popout.setTranslationTable({
             'You': '{{ 'Chat_You'|translate }}',
             'CustomerHelp': '{{ 'Chat_CustomerHelp'|translate }}',
             'StaffOnline': '{{ 'Chat_StaffOnline'|translate }}',
@@ -180,7 +182,15 @@
             'HasJoin': '{{ 'Chat_HasJoin'|translate }}'
         });
 
-        Piwik_Chat_Popout.initialize({{ state }});
+        // Create a communication socket between this page and its parent page (the one displaying the iframe)
+        var socket = new easyXDM.Socket({
+            remote: siteMainUrl,
+            onReady: function () {
+
+                popout.setSocket(socket);
+                popout.initialize();
+            }
+        });
     });
 </script>
 </body>
