--- a/stylesheets/client/popout.css
+++ b/stylesheets/client/popout.css
@@ -272,7 +272,7 @@ form {
     bottom: 54px;
 }
 
-.has-quit {
+.has-join-or-quit {
     border-bottom: 1px solid #EEEEEE;
     border-top: 1px solid #EEEEEE;
     font-style: italic;
