--- a/stylesheets/backend/chat.css
+++ b/stylesheets/backend/chat.css
@@ -121,6 +121,7 @@
     line-height: 17px;
     width: 96%;
     margin-bottom: 10px;
+    padding: 4px 5px;
 }
 
 #form-visitor-personnal-informations textarea {
