--- a/templates/listAutomaticMessages.twig
+++ b/templates/listAutomaticMessages.twig
@@ -1,4 +1,4 @@
-<span style="position: absolute; right: 15px; top: 20px; font-weight: bold;">
+<span style="font-weight: bold;">
 <a href="#" id="link-open-add-auto-msg">+ Add an automatic message</a>
 </span>
 <div class="dataTableWrapper">
