--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,3 +1,4 @@
+{% block content %}
 <div class="dataTableWrapper">
     <table width="100%" cellspacing="0" style="width:100%;table-layout:fixed;" class="dataTable list-conversations">
         <thead>
@@ -40,3 +41,4 @@
 {% if displayHelp == true %}
 <script>Piwik_Chat_Admin.displayHelp();</script>
 {% endif %}
+{% endblock %}
