--- a/templates/addOrUpdateAutomaticMessage.twig
+++ b/templates/addOrUpdateAutomaticMessage.twig
@@ -27,7 +27,7 @@
         </tr>
 
         <tr>
-            <td style="vertical-align: middle; width: 100px"><label for="transmitter">Transmitter </label></td>
+            <td style="vertical-align: middle; width: 100px"><label for="transmitter">Sender name </label></td>
             <td>
                 <input name="transmitter" style="width:50%" value="{% if mode == 'update' %}{{ autoMsg.transmitter|raw }}{% endif %}" size="25">
                 <span class="form-description" style="margin-left: 7px">ex: Automatic Message, Vincent, Discount codes..</span>
